--- a/git/formuladb-env/frmdb-apps/personal-blog/index.html
+++ b/git/formuladb-env/frmdb-apps/personal-blog/index.html
@@ -20,7 +20,7 @@
         <nav data-frmdb-fragment="_nav.html" src="_nav.html"></nav>
     </div>
     <header class="frmdb-t-cover">
-        <div class="frmdb-t-cover__main">
+        <div class="frmdb-t-main">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Title of website</h1>
@@ -30,7 +30,7 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </div>
-        <div class="frmdb-t-cover__section">
+        <div class="frmdb-t-aside">
             <form data-frmdb-fragment="_form.html" src="_form.html"></form>
         </div>
     </header>
