--- a/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
+++ b/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
@@ -8,7 +8,7 @@
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
     <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e0d0434253af14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac258b1_1280.jpg&quot;);">
-        <div class="frmdb-t-cover__main">
+        <div class="frmdb-t-main">
             <div class="jumbotron w-100 text-center bg-transparent" style="color: rgb(128, 128, 128);">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">great Restaurant</h1>
@@ -20,7 +20,7 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">order online</a>
             </div>
         </div>
-        <div class="frmdb-t-cover__section"></div>
+        <div class="frmdb-t-aside"></div>
     </header>
     <div data-frmdb-fragment="_form.html"></div>
     <section class="container py-5 text-center" style="color: rgb(128, 128, 128);">
