--- a/git/formuladb-env/frmdb-apps/wellness-services/index.html
+++ b/git/formuladb-env/frmdb-apps/wellness-services/index.html
@@ -8,7 +8,7 @@
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
     <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/wellness-services/static/54e8d0464352b108f5d08460962936771d3edce4524c704c7d2f7ad5944fcd5e_640.jpg&quot;);">
-        <div class="frmdb-t-cover__main flex-grow-1 d-flex flex-column justify-content-center">
+        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center">
             <div class="jumbotron w-100 text-center bg-transparent">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Title of website</h1>
@@ -18,7 +18,7 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </div>
-        <div class="frmdb-t-cover__section container frmdb-section-dark">
+        <div class="frmdb-t-aside container frmdb-section-dark">
             <div data-frmdb-fragment="_form.html"></div>
         </div>
     </header>
