--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -4,11 +4,11 @@
     <title>FormulaDB Themes</title>
 </head>
 <body class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav">
+    <frmdb-t-main-nav>
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-        <div class="frmdb-t-main">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+        <frmdb-t-main>
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Title of web app</h1>
@@ -17,96 +17,88 @@
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
-        </div>
-        <div class="frmdb-t-aside">
+        </frmdb-t-main>
+        <frmdb-t-aside>
             <div data-frmdb-fragment="_form.html"></div>
-        </div>
-        <div class="frmdb-t-section-divider"></div>
-    </header>
+        </frmdb-t-aside>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-cover>
     <section class="frmdb-section-light container py-5">
-        <div class="frmdb-t-section-divider"></div>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Cards with Images</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
-        <div class="frmdb-t-card-deck frmdb-cards-4">
-            <div class="frmdb-t-card-media-main ">
-                <div class="frmdb-t-img overflow-hidden"
-                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card1.jpg')">
-                </div>
+        <frmdb-t-card-deck class="frmdb-cards-4">
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card1.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden"
-                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card2.jpg')">
-                </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card2.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
                     <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main ">
-                <div class="frmdb-t-img overflow-hidden"
-                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card3.jpg')">
-                </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card3.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main ">
-                <div class="frmdb-t-img overflow-hidden"
-                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card4.jpg')">
-                </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card4.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-        </div>
-        <div class="frmdb-t-section-divider"></div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+        </frmdb-t-card-deck>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <section class="frmdb-t-media-section-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
-        <div class="frmdb-t-section-divider"></div>
+    <frmdb-t-media-section-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
                 <div class="jumbotron col-md-5">
@@ -117,10 +109,10 @@
                 </div>
             </div>
         </div>
-        <div class="frmdb-t-section-divider"></div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <section class="frmdb-section-light container">
-        <div class="frmdb-t-section-divider"></div>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section1.jpg" alt="...">
@@ -134,61 +126,61 @@
                 </div>
             </div>
         </div>
-        <div class="frmdb-t-section-divider"></div>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <section class="frmdb-t-section-cards-icon" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
-        <div class="frmdb-t-section-divider"></div>
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="frmdb-t-card-icon-main">
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
-        <div class="frmdb-t-section-divider"></div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="frmdb-section-light container py-5 my-5">
-        <div class="frmdb-t-section-divider"></div>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -202,9 +194,9 @@
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section2.jpg" alt="...">
             </div>
         </div>
-        <div class="frmdb-t-section-divider"></div>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <div class="frmdb-t-section-divider"></div>
+    <frmdb-t-section-divider></frmdb-t-section-divider>
     <div class="frmdb-section-dark" data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
