--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -5,7 +5,7 @@
 </head>
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
     <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
-        <div class="frmdb-t-cover__main flex-grow-1 d-flex flex-column justify-content-center 
+        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center 
 ">
             <div class="text-center
 ">
@@ -18,7 +18,7 @@
                 </p>
             </div>
         </div>
-        <div class="frmdb-t-cover__section container frmdb-section-dark"></div>
+        <div class="frmdb-t-aside container frmdb-section-dark"></div>
     </header>
     <section class="container py-5">
         <div class="text-center mb-5">
